@@ -1,11 +1,14 @@
 package it.gov.pagopa.cgn.portal.service;
 
 import it.gov.pagopa.cgn.portal.config.ConfigProperties;
-import it.gov.pagopa.cgn.portal.converter.DataExportEycaConverter;
+import it.gov.pagopa.cgn.portal.converter.*;
 import it.gov.pagopa.cgn.portal.converter.referent.DataExportEycaWrapper;
+import it.gov.pagopa.cgn.portal.email.*;
+import it.gov.pagopa.cgn.portal.email.EmailParams.Attachment;
 import it.gov.pagopa.cgn.portal.enums.DiscountCodeTypeEnum;
 import it.gov.pagopa.cgn.portal.enums.DiscountStateEnum;
 import it.gov.pagopa.cgn.portal.enums.SalesChannelEnum;
+import it.gov.pagopa.cgn.portal.exception.CGNException;
 import it.gov.pagopa.cgn.portal.model.AgreementEntity;
 import it.gov.pagopa.cgn.portal.model.DiscountEntity;
 import it.gov.pagopa.cgn.portal.model.EycaDataExportViewEntity;
@@ -13,20 +16,25 @@ import it.gov.pagopa.cgn.portal.model.ProfileEntity;
 import it.gov.pagopa.cgn.portal.repository.AgreementRepository;
 import it.gov.pagopa.cgn.portal.repository.DiscountRepository;
 import it.gov.pagopa.cgn.portal.repository.EycaDataExportRepository;
+import it.gov.pagopa.cgn.portal.util.CGNUtils;
 import it.gov.pagopa.cgnonboardingportal.eycadataexport.model.*;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVPrinter;
 import org.apache.commons.lang3.StringUtils;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.Resource;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Isolation;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.util.ObjectUtils;
 import org.springframework.web.client.RestClientException;
 
 import javax.transaction.Transactional;
-import java.io.IOException;
-import java.io.StringWriter;
+
+import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
@@ -34,11 +42,15 @@ import java.util.*;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
+import java.util.stream.*;
 
 @Slf4j
 @Service
 public class ExportService {
+
+    public static final String LIVE_YES="Y";
+    public static final String LIVE_NO="N";
 
     private final AgreementRepository agreementRepository;
     private final DiscountRepository discountRepository;
@@ -46,10 +58,46 @@ public class ExportService {
     private final EycaDataExportRepository eycaDataExportRepository;
     private final ConfigProperties configProperties;
     private final EycaExportService eycaExportService;
-    private final DataExportEycaConverter dataExportEycaConverter;
+    private final DataExportEycaWrapperConverter dataExportEycaConverter;
+    private final UpdateDataExportEycaWrapperConverter updateDataExportEycaConverter;
+    private final EmailNotificationFacade emailNotificationFacade;
+    
+    private final String[] eycaDataExportHeaders = new String[] {
+    		"discount_id",
+            "id",
+            "state",
+            "categories",
+            "profile_id",
+            "vendor",
+            "eyca_update_id",
+            "name",
+            "start_date",
+            "end_date",
+            "name_local",
+            "text",
+            "text_local",
+            "email",
+            "phone",
+            "web",
+            "tags",
+            "image",
+            "live",
+            "location_local_id",
+            "street",
+            "city",
+            "zip",
+            "country",
+            "region",
+            "latitude",
+            "longitude",
+            "SalesChannel",
+            "discount_type",
+            "landingPageReferrer",
+            "referent"
+    };
 
-
-    private final String[] exportAgreementsHeaders = new String[]{"Stato Convenzione",
+    private final String[] exportAgreementsHeaders = new String[]{
+            "Stato Convenzione",
             "Ragione sociale",
             "Nome alternativo",
             "Nome alternativo inglese",
@@ -75,9 +123,13 @@ public class ExportService {
             "Id Operatore",
             "Id Agevolazione"};
 
-    private final String[] exportEycaHeaders = new String[]{"LOCAL_ID",
+    private final String[] exportEycaHeaders = new String[]{
+            "DISCOUNT_ID",
+            "LOCAL_ID",
+            "STATE",
             "CATEGORIES",
             "VENDOR",
+            "EYCA_UPDATE_ID",
             "NAME",
             "NAME_LOCAL",
             "TEXT",
@@ -96,18 +148,29 @@ public class ExportService {
             "REGION",
             "GEO - Latitude",
             "GEO - Longitude",
-            "DISCOUNT TYPE"};
+            "SALES CHANNEL",
+            "DISCOUNT TYPE",
+            "LANDING PAGE REFERRER"
+    };
+    private Predicate<SearchApiResponseEyca> notExistsOnEycaPraticate = sae ->
+            sae.getApiResponse() != null &&
+            sae.getApiResponse().getData() != null &&
+            sae.getApiResponse().getData().getDiscounts() != null &&
+            ObjectUtils.isEmpty(sae.getApiResponse().getData().getDiscounts().getData());
 
 
     public ExportService(AgreementRepository agreementRepository, DiscountRepository discountRepository, EycaDataExportRepository eycaDataExportRepository,
                          ConfigProperties configProperties, EycaExportService eycaExportService,
-                         DataExportEycaConverter dataExportEycaConverter) {
-        this.agreementRepository = agreementRepository;
+                         DataExportEycaWrapperConverter dataExportEycaConverter, UpdateDataExportEycaWrapperConverter updateDataExportEycaConverter, 
+                         EmailNotificationFacade emailNotificationFacade) {
+		this.agreementRepository = agreementRepository;
         this.discountRepository = discountRepository;
         this.eycaDataExportRepository = eycaDataExportRepository;
         this.configProperties = configProperties;
         this.eycaExportService = eycaExportService;
         this.dataExportEycaConverter = dataExportEycaConverter;
+        this.updateDataExportEycaConverter=updateDataExportEycaConverter;
+        this.emailNotificationFacade = emailNotificationFacade;
     }
 
     @Transactional(Transactional.TxType.REQUIRED)
@@ -144,13 +207,18 @@ public class ExportService {
     public ResponseEntity<Resource> exportEycaDiscounts() {
         log.info("exportEycaDiscounts start");
         List<EycaDataExportViewEntity> exportViewEntities = eycaDataExportRepository.findAll();
+
         StringWriter writer = new StringWriter();
         try (CSVPrinter printer = new CSVPrinter(writer, CSVFormat.EXCEL)) {
             printerConsumer.apply(printer).accept(exportEycaHeaders);
             exportViewEntities.stream()
-                    .map(r -> new String[]{r.getId().toString(),
+                    .map(r -> new String[]{
+                            Optional.ofNullable(r.getDiscountId()).orElse(0L).toString(),
+                    		r.getId().toString(),
+                            r.getState(),
                             r.getCategories(),
                             r.getVendor(),
+                            r.getEycaUpdateId(),
                             r.getName(),
                             r.getNameLocal(),
                             r.getText(),
@@ -169,7 +237,10 @@ public class ExportService {
                             r.getRegion(),
                             r.getLatitude(),
                             r.getLongitude(),
-                            r.getDiscountType()})
+                            r.getSalesChannel(),
+                            r.getDiscountType(),
+                            r.getLandingPageReferrer(),
+                            })
                     .forEach(printerConsumer.apply(printer));
 
             byte[] export = writer.toString().getBytes(StandardCharsets.UTF_8);
@@ -190,59 +261,126 @@ public class ExportService {
         }
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
     }
+    
+    @Transactional(Transactional.TxType.REQUIRED)
+    public ByteArrayResource buildEycaCsv(List<EycaDataExportViewEntity> exportViewEntities) {
+        StringWriter writer = new StringWriter();
+        try (CSVPrinter printer = new CSVPrinter(writer, CSVFormat.EXCEL.builder().setDelimiter(';').build())) {
+
+        	DateTimeFormatter ddMMyyyy = DateTimeFormatter.ofPattern("dd-MM-yyyy");
+        	
+        	printerConsumer.apply(printer).accept(eycaDataExportHeaders);
+            exportViewEntities.stream()
+            .map(r -> new String[]{
+                    Optional.ofNullable(r.getDiscountId()).orElse(0L).toString(),
+            		r.getId().toString(),
+                    r.getState(),
+                    r.getCategories(),
+                    Optional.ofNullable(r.getProfileId()).orElse(0L).toString(),
+                    r.getVendor(),
+                    r.getEycaUpdateId(),
+                    r.getName(),
+                    Optional.ofNullable(r.getStartDate()).map( ld -> ld.format(ddMMyyyy)).orElse(""),
+                    Optional.ofNullable(r.getEndDate()).map( ld -> ld.format(ddMMyyyy)).orElse(""),
+                    r.getNameLocal(),
+                    r.getText(),
+                    r.getTextLocal(),
+                    r.getEmail(),
+                    r.getPhone(),
+                    r.getWeb(),
+                    r.getTags(),
+                    r.getImage(),
+                    r.getLive(),
+                    r.getLocationLocalId(),
+                    r.getStreet(),
+                    r.getCity(),
+                    r.getZip(),
+                    r.getCountry(),
+                    r.getRegion(),
+                    r.getLatitude(),
+                    r.getLongitude(),
+                    r.getSalesChannel(),
+                    r.getDiscountType(),
+                    r.getLandingPageReferrer(),
+                    Optional.ofNullable(r.getReferent()).orElse(0L).toString(),
+                    })
+            .forEach(printerConsumer.apply(printer));
+
+
+            log.info("buildEycaCsv end success");
+            return new ByteArrayResource(writer.toString().getBytes(StandardCharsets.UTF_8));
+        } catch (Exception ex) {
+            log.error("buildEycaCsv end failure: " + ex.getMessage());
+        }
+        return new ByteArrayResource(new byte[] {});
+    }
+
 
     @Transactional(Transactional.TxType.REQUIRED)
     public ResponseEntity<String> sendDiscountsToEyca() {
+        
+    	try {
+    	    	
+	        Optional<Boolean> eycaExportEnabled = Optional.ofNullable(configProperties.getEycaExportEnabled());
+	        if (eycaExportEnabled.isEmpty() || Boolean.FALSE.equals(eycaExportEnabled.get())) {
+	            log.info("sendDiscountsToEyca aborted - eyca.export.enabled is FALSE");
+	            return ResponseEntity.status(HttpStatus.OK).body("sendDiscountsToEyca aborted - eyca.export.enabled is FALSE");
+	        }
+	
+	        log.info("sendDiscountsToEyca start");
+	        List<EycaDataExportViewEntity> exportViewEntities = eycaDataExportRepository.findAll();
 
-        Optional<Boolean> eycaExportEnabled = Optional.ofNullable(configProperties.getEycaExportEnabled());
-        if (eycaExportEnabled.isEmpty() || Boolean.FALSE.equals(eycaExportEnabled.get())) {
-            log.info("sendDiscountsToEyca aborted - eyca.export.enabled is FALSE");
-            return null;
-        }
+	        if (exportViewEntities.isEmpty()) {
+	            log.info("No EYCA data to export");
+                return ResponseEntity.status(HttpStatus.OK).body("No EYCA data to export");
+	        }
 
-        log.info("sendDiscountsToEyca start");
-        List<EycaDataExportViewEntity> exportViewEntities = eycaDataExportRepository.findAll();
+            List<SearchDataExportEyca> itemsToSearchOnEyca = getItemsToSearchOnEyca(exportViewEntities);
+            syncEycaUpdateIdOnEyca(itemsToSearchOnEyca, exportViewEntities);
 
-        exportViewEntities.forEach(exportViewEntity -> log.info(
-                "<<EYCA_LOG>><<exportViewEntity<<: " +
-                        exportViewEntity.toString()));
+	    	//Tutte le agevolazioni da creare su eyca secondo le condizioni imposte sulla view
+	    	List<DataExportEycaWrapper<DataExportEyca>> entitiesToCreateOnEyca = getWrappersToCreateOnEyca(exportViewEntities);
 
-        if (exportViewEntities.isEmpty()) {
-            log.info("No EYCA data to export");
-            return null;
-        }
+	    	//Tutte le agevolazioni che avevano valorizzato il campo eycaUpdateId, precedentemente alla create.
+			List<DataExportEycaWrapper<UpdateDataExportEyca>> entitiesToUpdateOnEyca = getWrappersToUpdateOnEyca(exportViewEntities);
+			
+			//Tutte le agevolazioni che sono andate in Live=N
+			List<DeleteDataExportEyca> entitiesToDeleteOnEyca = getItemsToDeleteOnEyca(exportViewEntities);
 
-        String eycaNotAllowedDiscountModes = configProperties.getEycaNotAllowedDiscountModes();
+	        log.info("EYCA_LOG_CREATE:");
+	        createDiscountsOnEyca(entitiesToCreateOnEyca);
 
-        try {
-            List<DataExportEycaWrapper> upsertOnEycaList = exportViewEntities.stream()
-                    .filter(entity -> !StringUtils.isBlank(entity.getDiscountType()))
-                    .filter(entity -> !listFromCommaSeparatedString.apply(eycaNotAllowedDiscountModes)
-                            .contains(entity.getDiscountType()))
-                    .filter(entity -> !(entity.getDiscountType().equals(DiscountCodeTypeEnum.LANDINGPAGE.getEycaDataCode())
-                            && !Objects.isNull(entity.getReferent())))
-                    .filter(entity -> !StringUtils.isBlank(entity.getLive()) && entity.getLive().equals("Y"))
-                    .collect(Collectors.groupingBy(EycaDataExportViewEntity::getDiscountId))
-                    .entrySet().stream()
-                    .map(dataExportEycaConverter::groupedEntityToDto)
-                    .collect(Collectors.toList());
+	        log.info("EYCA_LOG_UPDATE:");
+	        updateDiscountsOnEyca(entitiesToUpdateOnEyca);
 
-            if (!upsertOnEycaList.isEmpty()){
-                createNewDiscountsOnEyca(upsertOnEycaList);
-                updateDiscountsOnEyca(upsertOnEycaList);
+	        log.info("EYCA_LOG_DELETE:");
+         	deleteDiscountsOnEyca(entitiesToDeleteOnEyca);
+            
+            List<Attachment> attachments = new ArrayList<>();
+            if(!exportViewEntities.isEmpty()) {
+            	attachments.add(new Attachment("all.csv", buildEycaCsv(exportViewEntities)));
             }
-
-            List<DataExportEycaWrapper> deleteOnEycaList = exportViewEntities.stream()
-                    .filter(entity -> StringUtils.isBlank(entity.getLive()) || entity.getLive().equals("N"))
-                    .filter(entity -> !entity.getEndDate().isBefore(LocalDate.now().minusDays(1)))
-                    .filter(entity->!StringUtils.isEmpty(entity.getEycaUpdateId()))
-                    .collect(Collectors.groupingBy(EycaDataExportViewEntity::getDiscountId))
-                    .entrySet().stream()
-                    .map(dataExportEycaConverter::groupedEntityToDto)
-                    .collect(Collectors.toList());
-
-            deleteDiscountsOnEyca(deleteOnEycaList);
-
+            
+            if(!entitiesToCreateOnEyca.isEmpty()) {
+            	attachments.add(new Attachment("createOnEyca.csv", buildEycaCsv(createOnEycaStream(exportViewEntities).toList())));
+            }
+            
+            if(!entitiesToUpdateOnEyca.isEmpty()) {
+            	attachments.add(new Attachment("updateOnEyca.csv", buildEycaCsv(updateOnEycaStream(exportViewEntities).toList())));
+            }
+            
+            if(!entitiesToDeleteOnEyca.isEmpty()) {
+            	attachments.add(new Attachment("deleteOnEyca.csv", buildEycaCsv(deleteOnEycaStream(exportViewEntities).toList())));
+            }
+             
+            String body = "Discounts to create: "+entitiesToCreateOnEyca.size()
+            			  +"<br /> Discounts to update: "+entitiesToUpdateOnEyca.size()
+            			  +"<br /> Discounts to delete: "+entitiesToDeleteOnEyca.size();
+            
+            log.info("MAIL-BODY: "+body);
+            
+            emailNotificationFacade.notifyAdminForJobEyca(attachments,body);
+            
             log.info("sendDiscountsToEyca end success");
 
             return ResponseEntity.status(HttpStatus.OK).build();
@@ -252,111 +390,230 @@ public class ExportService {
             log.error(Arrays.stream(ex.getStackTrace())
                     .map(StackTraceElement::toString)
                     .collect(Collectors.joining("\n")));
+
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
     }
 
-    private void createNewDiscountsOnEyca(List<DataExportEycaWrapper> exportEycaList){
+    public void syncEycaUpdateIdOnEyca(List<SearchDataExportEyca> exportEycaList, List<EycaDataExportViewEntity> exportViewEntities){
+
+        if (exportEycaList.isEmpty()) {
+            log.info("No discounts to search");
+            return;
+        }
 
         eycaExportService.authenticateOnEyca();
 
-        log.info("creating new discount on EYCA");
+        log.info("Searching discounts on EYCA...");
 
-        List<DataExportEycaWrapper> createList = exportEycaList.stream().
-                filter(entity->StringUtils.isEmpty(entity.getEycaUpdateId())).collect(Collectors.toList());
+        exportEycaList.forEach(exportEyca -> {
 
-        if (createList.isEmpty()) {
+            log.info("SEARCH SearchDataExportEyca: " + exportEyca.toString());
+            SearchApiResponseEyca response = null;
+            try {
+                response = eycaExportService.searchDiscount(exportEyca,"json"); //default search, Live=Y
+
+                if (Objects.nonNull(response)){
+                    log.info("Default Search Response:");
+                    log.info(response.toString());
+                }
+
+                if(notExistsOnEycaPraticate.test(response)) {
+                    exportEyca.setLive(0);
+                    response = eycaExportService.searchDiscount(exportEyca, "json"); //search with Live = N
+
+                    if (Objects.nonNull(response)){
+                        log.info("Search Response with Live = N:");
+                        log.info(response.toString());
+                    }
+
+                    if(notExistsOnEycaPraticate.test(response)) {
+                        String eycaUpdateId = exportEyca.getId();
+                        DiscountEntity entity = discountRepository.findByEycaUpdateId(eycaUpdateId)
+                                .orElseThrow( () -> new CGNException("Discount with EycaUpdateId: "+eycaUpdateId+" from eyca not found on Discount table"));
+
+                        EycaDataExportViewEntity viewItem = exportViewEntities.stream().filter(d -> entity.getEycaUpdateId().equals(d.getEycaUpdateId())).findFirst().get();
+                        entity.setEycaUpdateId(null);
+                        discountRepository.saveAndFlush(entity);
+                        viewItem.setEycaUpdateId(null);
+                    }
+                }
+            }
+            catch (RestClientException rce) {
+                log.info("SEARCH eycaApi.searchDiscount Exception: " + rce.getMessage());
+            }
+        });
+    }
+
+
+    private List<SearchDataExportEyca> getItemsToSearchOnEyca(List<EycaDataExportViewEntity> exportViewEntities) {
+        //Sfrutto lo stream dell'update che verifica la presenza dell'eyca_update_id
+        return updateOnEycaStream(exportViewEntities)
+                .map(this::convertToSearchDataExportEyca)
+                .toList();
+    }
+
+    private List<DeleteDataExportEyca> getItemsToDeleteOnEyca(List<EycaDataExportViewEntity> exportViewEntities) {
+		return deleteOnEycaStream(exportViewEntities)
+                .map(this::convertToDeleteDataExportEyca)
+                .toList();
+    }	
+    
+    public DeleteDataExportEyca convertToDeleteDataExportEyca(EycaDataExportViewEntity entity) {
+        DeleteDataExportEyca deleteDataExportEyca = new DeleteDataExportEyca();
+        Optional<String> optDiscountId = Optional.ofNullable(entity.getEycaUpdateId());
+        deleteDataExportEyca.setId(optDiscountId.orElseThrow(() -> new CGNException("Error during viewEntity to delete conversion, eycaUpdateId is empty")));
+        return deleteDataExportEyca;
+    }
+
+    public SearchDataExportEyca convertToSearchDataExportEyca(EycaDataExportViewEntity entity) {
+        SearchDataExportEyca searchDataExportEyca = new SearchDataExportEyca();
+        Optional<String> optDiscountId = Optional.ofNullable(entity.getEycaUpdateId());
+        searchDataExportEyca.setId(optDiscountId.orElseThrow(() -> new CGNException("Error during viewEntity to search conversion, eycaUpdateId is empty")));
+        searchDataExportEyca.setLive(1);
+        return searchDataExportEyca;
+    }
+
+	
+	private List<DataExportEycaWrapper<UpdateDataExportEyca>> getWrappersToUpdateOnEyca(List<EycaDataExportViewEntity> exportViewEntities) {
+		return updateOnEycaStream(exportViewEntities)
+		        .map(updateDataExportEycaConverter::toDto)
+                .toList();
+	}
+
+	private List<DataExportEycaWrapper<DataExportEyca>> getWrappersToCreateOnEyca(
+			List<EycaDataExportViewEntity> exportViewEntities) {
+		
+		return createOnEycaStream(exportViewEntities)
+		.map(dataExportEycaConverter::toDto)
+                .toList();
+	}
+	
+
+    private Stream<EycaDataExportViewEntity> deleteOnEycaStream(List<EycaDataExportViewEntity> exportViewEntities) {
+    	return exportViewEntities.stream()
+				.filter(e -> LIVE_NO.equalsIgnoreCase(e.getLive()))
+				.filter(e -> !StringUtils.isEmpty(e.getEycaUpdateId()));
+    }    
+    
+    private Stream<EycaDataExportViewEntity> updateOnEycaStream(List<EycaDataExportViewEntity> exportViewEntities) {
+    	return exportViewEntities.stream()
+                .filter(e -> LIVE_YES.equalsIgnoreCase(e.getLive()))
+                .filter(e -> !StringUtils.isEmpty(e.getEycaUpdateId()));
+    }
+    private Stream<EycaDataExportViewEntity> createOnEycaStream(List<EycaDataExportViewEntity> exportViewEntities) {
+        return exportViewEntities.stream()
+                .filter(e -> LIVE_YES.equalsIgnoreCase(e.getLive()))
+                .filter(e -> StringUtils.isEmpty(e.getEycaUpdateId()));
+	}
+
+    private void createDiscountsOnEyca(List<DataExportEycaWrapper<DataExportEyca>> exportEycaList){
+
+        if (exportEycaList.isEmpty()) {
             log.info("List of EYCA Discounts to be created is empty");
             return;
         }
+        
         eycaExportService.authenticateOnEyca();
+        
+        log.info("Creating new discount on EYCA...");
 
-        createList.forEach(exportEycaWrapper -> {
+        exportEycaList.forEach(exportEycaWrapper -> {
             DataExportEyca exportEyca = exportEycaWrapper.getDataExportEyca();
 
-            log.info("<<EYCA_LOG>><<CREATE_exportEyca<<: " + exportEyca.toString());
+            log.info("CREATE DataExportEyca: " + CGNUtils.toJson(exportEyca));
             ApiResponseEyca response = null;
             try {
                 response = eycaExportService.createDiscount(exportEyca, "json");
-            } catch (RestClientException rce) {
-                log.info("<<EYCA_LOG>><<eycaApi.createDiscount Exception>>: " + rce.getMessage());
-            }
-            Optional<DiscountEntity> discountEntity = discountRepository.findById(exportEycaWrapper.getDiscountID());
 
-            ApiResponseEyca finalResponse = response;
-            discountEntity.ifPresent(entity -> {
-                if(finalResponse !=null &&
-                        finalResponse.getApiResponse() != null &&
-                        finalResponse.getApiResponse().getData() != null &&
-                        finalResponse.getApiResponse().getData().getDiscount() != null){
-                    entity.setEycaUpdateId(finalResponse.getApiResponse().getData().getDiscount().get(0).getId());
+                if (Objects.nonNull(response)){
+                	log.info("Create Response:");
+ 	                log.info(response.toString());
+ 	            }                	
+                
+                DiscountEntity entity = discountRepository.findById(exportEycaWrapper.getDiscountID())
+                		.orElseThrow( () -> new CGNException("discountId from Eyca " 
+                					+ exportEycaWrapper.getDiscountID()+" not found on Discount table"));
+
+                if(response !=null &&
+                		response.getApiResponse() != null &&
+                		response.getApiResponse().getData() != null &&
+                		response.getApiResponse().getData().getDiscount() != null 
+                				&& !response.getApiResponse().getData().getDiscount().isEmpty()){
+                	
+                	entity.setEycaUpdateId(response.getApiResponse().getData().getDiscount().get(0).getId());
                     discountRepository.save(entity);
-                }
-
-            });
+                }                
+            } catch (RestClientException | CGNException e) {
+                log.info("CREATE eycaApi.createDiscount Exception>>: " + e.getMessage());
+            }
         });
-
     }
 
-
-    private void updateDiscountsOnEyca(List<DataExportEycaWrapper> exportEycaList) {
-        log.info("updating old discount on EYCA");
-
-        List<UpdateDataExportEyca> updateList = exportEycaList.stream()
-                .filter(entity->!StringUtils.isEmpty(entity.getEycaUpdateId()))
-                .map(dataExportEycaConverter::convertToUpdateDataExportEyca).collect(Collectors.toList());
-
-        if (updateList.isEmpty()) {
+    private void updateDiscountsOnEyca(List<DataExportEycaWrapper<UpdateDataExportEyca>> exportEycaList) {
+        
+    	if (exportEycaList.isEmpty()) {
             log.info("List of EYCA Discounts to be updated is empty");
             return;
         }
         eycaExportService.authenticateOnEyca();
+        
+        log.info("Updating old discount on EYCA...");
 
-        updateList.forEach(exportEyca ->
-                {  log.info("<<EYCA_LOG>><<UPDATE_exportEyca<<: " + exportEyca.toString());
-                    ApiResponseEyca apiResponse = null;
-                    try {
-                        apiResponse = eycaExportService.updateDiscount(exportEyca, "json");
-                    }  catch (RestClientException rce) {
-                        log.info("<<EYCA_LOG>><<eycaApi.updateDiscount Exception>>: " + rce.getMessage());
-                    }
-
-                    if (Objects.nonNull(apiResponse)){
-                        log.info(apiResponse.toString());
-                    }
-                }
-        );
+        exportEycaList.forEach(exportEycaWrapper -> {  
+	        UpdateDataExportEyca exportEyca = exportEycaWrapper.getDataExportEyca();
+	        
+	    	log.info("UPDATE UpdateDataExportEyca: " + CGNUtils.toJson(exportEyca));
+	        ApiResponseEyca response = null;
+	        try {
+	        	
+	        	response = eycaExportService.updateDiscount(exportEyca, "json");
+	        	
+                if (Objects.nonNull(response)){
+                	log.info("Update Response:");
+ 	                log.info(response.toString());
+ 	            }
+	        }
+	        catch (RestClientException | CGNException e) {
+	            log.info("UPDATE eycaApi.updateDiscount Exception: " + e.getMessage());
+	        }
+	    });
     }
 
 
-    private void deleteDiscountsOnEyca(List<DataExportEycaWrapper> exportEycaList) {
-        log.info("deleting discount on EYCA");
-        List<DeleteDataExportEyca> deleteList = exportEycaList.stream()
-                .map(dataExportEycaConverter::convertToDeleteDataExportEyca).collect(Collectors.toList());
+    private void deleteDiscountsOnEyca(List<DeleteDataExportEyca> exportEycaList) {
 
-        if (deleteList.isEmpty()) {
-            log.info("List of EYCA Discounts to be deeleted is empty");
+        if (exportEycaList.isEmpty()) {
+            log.info("List of EYCA Discounts to be deleted is empty");
             return;
         }
         eycaExportService.authenticateOnEyca();
 
-        deleteList.forEach(exportEyca ->
-                {  log.info("<<EYCA_LOG>><<DELETE_exportEyca<<: " + exportEyca.toString());
-                    DeleteApiResponseEyca apiResponse = null;
-                    try {
-                        apiResponse = eycaExportService.deleteDiscount(exportEyca, "json");
-                    }  catch (RestClientException rce) {
-                        log.info("<<EYCA_LOG>><<eycaApi.deleteDiscount Exception>>: " + rce.getMessage());
-                    }
+        log.info("Deleting discount on EYCA...");
+        
+        exportEycaList.forEach(exportEyca -> {
+        	
+			log.info("DELETE DeleteDataExportEyca: " + exportEyca.toString());
+            DeleteApiResponseEyca response = null;
+            try {
+            	response = eycaExportService.deleteDiscount(exportEyca, "json");
+                
+                if (Objects.nonNull(response)){
+                	log.info("Delete Response:");
+ 	                log.info(response.toString());
+ 	            }
 
-                    if (Objects.nonNull(apiResponse)){
-                        log.info(apiResponse.toString());
-                    }
-                }
-        );
+                String eycaUpdateId = exportEyca.getId();
+	            DiscountEntity entity = discountRepository.findByEycaUpdateId(eycaUpdateId)
+	            		.orElseThrow( () -> new CGNException("Discount with EycaUpdateId: "+eycaUpdateId+" from eyca not found on Discount table"));
+	        	entity.setEycaUpdateId(null);
+	            discountRepository.save(entity);
+            }  
+            catch (RestClientException rce) {
+                log.info("DELETE eycaApi.deleteDiscount Exception: " + rce.getMessage());
+            }
+        });
     }
-
-
 
     private final BiFunction<AgreementEntity, Optional<DiscountEntity>, String[]>
             agreementWithProfileAndDiscountToStringArray
@@ -431,10 +688,4 @@ public class ExportService {
             log.error(e.getMessage());
         }
     };
-
-    private final Function<String, List<String>> listFromCommaSeparatedString= value-> Optional.ofNullable(value)
-            .map(str -> Arrays.stream(str.split(","))
-                    .map(String::trim)
-                    .collect(Collectors.toList()))
-            .orElse(new ArrayList<>());
 }
